@@ -224,16 +224,6 @@ public class Triangle extends Shape {
 	public float getMaxY() {
 		return polygon.getMaxY();
 	}
-	
-	@Override
-	public float getOriginX() {
-		return polygon.getOriginX();
-	}
-	
-	@Override
-	public float getOriginY() {
-		return polygon.getOriginY();
-	}
 
 	@Override
 	public EdgeIterator edgeIterator() {
