@@ -3,6 +3,7 @@
 - UiFont now caches BitmapFont instances
 - Added Graphics#drawBitmapFontCache
 - UI framework now renders text using BitmapFontCache instances
+- Performance improvements to Polygon class
 
 [1.3.1]
 - Graphics can now take circle radius as an int or float
